public class Interactions {

}
