package model;

interface ManagerObserver {
    
}
