package view;

public class Terminal {
    
}
