    @startuml


'a faire, trouver comment faire le "enroque"

    skinparam style strictuml
    skinparam classAttributeIconSize 0
    skinparam classFontStyle Bold
    hide enum methods

    class Main{
        + main() : int
    }

    package Controller{
        class GameFacade{
            - nextToPlay : Boolean
            + clickedOnSomeCase(posX  : Integer, posY : Integer)
            + changePiecePromotion(posX : Integer, posY : Integer)
            + play()
            + draw()
            + win()
        }

        class Supervisor{
            - previewCasesMvt : Boolean[] 
            - previewCasesAtk : Boolean[] 

            + Supervisor()
            + clickedOnSomeCase(posX : Integer, posY : Integer, team : Boolean)
            - isCasePreviewMvt(posX : Integer, posY : Integer) : Boolean
            - isCasePreviewAtk(posX : Integer, posY : Integer) : Boolean
            - pawnMvt()
            - pwnAtk()
            - bishopMvt()
            - queenMvt()
            + addObs(obs : InteractionsObserver)
            - notifyPrev()
            - notifyEndPrev()
            - notifyPromotion()
        }


    }



    class interactions{ 
        - previewCasesMvt : Boolean[] 
        - previewCasesAtk : Boolean[] 

        + Supervisor()
        + clickedOnSomeCase(posX : Integer, posY : Integer, team : Boolean)
        - isCasePreviewMvt(posX : Integer, posY : Integer) : Boolean
        - isCasePreviewAtk(posX : Integer, posY : Integer) : Boolean
        - pawnMvt()
        - pwnAtk()
        - bishopMvt()
        - queenMvt()
        + addObs(obs : InteractionsObserver)
        - notifyPrev()
        - notifyEndPrev()
        - notifyPromotion()
    }

    package Model{

        

        class Manager{
            - whitePts : Integer
            - blackPts : Integer
            + addPoints(team : Boolean, pts : Integer)
            + getPoints(team : Boolean)
            + addObs(obs : InteractionsObserver)
            - notifyWin(team : Boolean)
            - notifyDraw()
        }

        class Board{
            + Board()
            + initBoard()
            + getPiece(posX : Integer, posY : Integer)
            + doesCaseContainPlayerPiece(posX : Integer, posY : Integer, team Boolean) : Boolean
            + movePiece(oldPosX : Integer, oldPosY : Integer, newPosX : Integer, newPosY : Integer)
            + destroyPiece(posX : Integer, posY : Integer)
            + addObs(obs : InteractionsObserver)
            - notifyPieceTaken(team : Boolean, imageLink : String)
            - notifyMov()
        }

        

        
        
        abstract class Piece{
            - chessName : String
            - value : Integer
            - team : Boolean
            - imageLink : String

            + Piece(team : Boolean) : Piece 
            + getTeam() : Boolean
            + getValue() : Integer
            + getChessName() : String
        }

        class Pawn implements Piece{
            + Pawn(team : Boolean)
            - HasMadeFirstMove : Boolean
            + getHasMoved() : Boolean
            + Moove()
        }

        class King implements Piece{
            + King(team : Boolean)
        }

        class Queen implements Piece{
            + Queen(team : Boolean)
        }

        class Bishop implements Piece{
            + Bishop(team : Boolean) 
        }

        class Rook implements Piece{
            + Rook(team : Boolean)
        }

        class Knight implements Piece{
            + Knight(team : Boolean)
        }

        interface BoardObserver{
            + DisplayGame(pieces : Piece[]) {abstract}
            + displayPreview(previews : Boolean[] , typeMvt : Boolean) {abstract}
            + displayPromotion(posX : Integer, posY : Integer)
            + hidePreview() {abstract}
            + displayWin(team : Boolean)
            + displayDraw()
            
        }

        interface ManagerObserver{
            + DisplayScore(team : Boolean)
        }
    }

    package View{
        'two observers
        'this one is displaying everything with swing
         class DisplayGame implements BoardObserver{
            + DisplayGame(pieces : Piece[] )
            + displayPreview(previews : Boolean[], typeMvt : Boolean)
            + displayPromotion(posX : Integer, posY : Integer)
            + hidePreview()
            + displayWin(team : Boolean)
            + displayDraw()
            + displayPieceTaken(team : Boolean, imageLink : String)
        }

        class Terminal implements BoardObserver{
            + DisplayGame(piece[] pieces)
            + displayPreview(Boolean[] previews, Boolean typeMvt)
            + displayPromotion(posX : Integer, posY : Integer)
            + hidePreview()
            + displayWin(team: Boolean)

            + displayDraw()
            + displayPieceTaken(team : Boolean, imageLink : String)
        }

        class PanelPlayer as "PanelPlayer extends Jpanel"{}

        class PanelBoard as "PanelBoard extends PanelBoard"{} 


    }

    PanelPlayer <- DisplayGame : "use <"
    PanelBoard <-d- DisplayGame : "use >"
    'PanelBoard ..d.> JPanel : "extends >"

    

    'GameFacade "1\n Supervisor" o-> Supervisor : "own >"
    GameFacade "1\n manager" o-> Manager : "own >"
    Main ..> Board : "instantiate >"
    Manager "*\n observers" o--> ManagerObserver : "is observed by"


    'Supervisor "*\n observers" o--> ManagerObservers : "is observed by"
    'Supervisor "1\nboard" *-d-> Board : "own >" 
    
    Supervisor -> Board : "use >"

    Board ...d.> Pawn : "instantiate >"
    Board ...d.> King : "instantiate >"
    Board ...d.> Queen : "instantiate >"
    Board ...d.> Bishop : "instantiate >"
    Board ...d.> Rook : "instantiate >"
    Board ...d.> Knight : "instantiate >"

    Board "pieces\n*" -l-> Piece : " contains >"
    Board "*\n observers" o--> BoardObserver : "is observed by"


    Main .d.> GameFacade : "instantiate >"
    Main .d.> DisplayGame : "instantiate >"
    Main .d.> Terminal : "instantiate >"
    'Main .d.> Supervisor : "instantiate >"
    Main ..d.> Manager : "instantiate >"

    DisplayGame "1\nfacade" o-u-> GameFacade : "owns >"
    Terminal "1\nfacade" o-u-> GameFacade : "owns >"

    @enduml
'############################################################
    @startuml


'a faire, trouver comment faire le "enroque"

    skinparam style strictuml
    skinparam classAttributeIconSize 0
    skinparam classFontStyle Bold
    hide enum methods

    class Main{
        + main() : int
    }


    package model{
        class Board{

            + Board()
            + initBoard()
            + getPiece(posX : Integer, posY : Integer)
            + doesCaseContainPlayerPiece(posX : Integer, posY : Integer, team Boolean) : Boolean
            + movePiece(oldPosX : Integer, oldPosY : Integer, newPosX : Integer, newPosY : Integer)
            + destroyPiece(posX : Integer, posY : Integer)
            + addObs(obs : InteractionsObserver)
            - notifyPieceTaken(team : Boolean, imageLink : String)
            - notifyMov()
        
        }

        class Piece{

        }

        class Pawn{

        }

        class Bishop{

        }

        class King{

        }

        class Queen{

        }

        class Knight{

        }

        class Rook{

        }

        class BoardObserver{

        }

        class Manager{

        }

        class ManagerObserver{

        }


    }

    package controller{
        class Supervisor{
            + setBoard()
        }

        class GameFacade{

        }

    }

    package view{
        class DisplayBoard{
            + setBoard()
        }

        class Terminal{
            + setBoard()
        }

        class PanelBoard{

        }

        class PanelPlayer{

        }


    }


    'main
    Main ..l> Board : "instantiate >"
    Main ...> GameFacade : "instantiate >"
    Main .l.> DisplayBoard : "instantiate >"
    Main ...> Terminal : "instantiate >"
    Main .d.> Supervisor : "instantiate >"
    Main ..d.> Manager : "instantiate >"
    
    'view
    DisplayBoard o-d-> PanelBoard : "use >"
    DisplayBoard o--> PanelPlayer : "use >"

    'model
    Board "*\n observers" o--> BoardObserver : "is observed by"
    Manager "*\n observers" o--> ManagerObserver : "is observed by"
   
    'controller
    
   


    'relation view - controller
    'cette relation envoie la position de la case cliquee a controller
    DisplayBoard -> Supervisor : "calls >"  

    'relation view - model
    

    'relation controller - model
    Supervisor -> Board : "use"


    'layout
    Board -[hidden]> Manager
    'DisplayBoard -[hidden]> Supervisor : "consults >"

    @enduml
